--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -2,6 +2,8 @@
   <ol class="breadcrumb">
     <li class="breadcrumb-item">
       <a routerLink="/">Home</a>
+    </li>
+    <li class="breadcrumb-item">
       <a routerLink="/categories">Categorias</a>
     </li>
     <li class="breadcrumb-item active">
@@ -23,7 +25,7 @@
   </div>
 </div>
 
-<form>
+<form [formGroup]="categoryForm">
 
   <div class="card">
     <div class="card-header">
